--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">FirebaseDatabaseExample</string>
-    <string name="movie_name_hint">Enter Movie Name</string>
+    <string name="app_name">BIOLOGIA</string>
+    <string name="movie_name_hint">BIOLOGIA</string>
 </resources>
